# distributed-cache

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
benchmarks/results/20251219_121143/: results.csv
cpp/: CMakeLists.txt
cpp/bench/: resp_bench.cpp
cpp/benchmarks/: perf_bench.cpp  rebalancer_bench.cpp
cpp/docs/: design.md
cpp/include/cache/: allocator.h  cache.h  eviction.h  lfu.h  lru.h
cpp/include/metrics/: metrics.h
cpp/include/net/: event_poller.h  reactor.h  thread_pool.h
cpp/include/network/: tcp_server.h  transport.h  udp_server.h
cpp/include/protocol/: http_proto.h  memcached_proto.h  resp.h
cpp/include/replication/: log.h  mock_replicator.h  raft.h  replicator.h  snapshot.h  wal.h
cpp/include/sharder/: consistent_hash.h  membership_service.h  rebalancer.h  router.h
cpp/src/: main.cpp
cpp/src/cache/: cache.cpp  lfu.cpp  lru.cpp
cpp/src/metrics/: metrics.cpp
cpp/src/net/: epoll_poller.cpp  kqueue_poller.cpp  reactor.cpp  thread_pool.cpp
cpp/src/network/: tcp_server.cpp  udp_server.cpp
cpp/src/protocol/: http_proto.cpp  memcached_proto.cpp  resp.cpp
cpp/src/replication/: mock_replicator.cpp  raft.cpp  snapshot.cpp  wal.cpp
cpp/src/sharder/: consistent_hash.cpp  membership_service.cpp  rebalancer.cpp  router.cpp
cpp/tests/: CMakeLists.txt  cache_tests.cpp  membership_redirection_test.cpp  raft_install_snapshot_tests.cpp  raft_integration_tests.cpp  raft_restart_snapshot_tests.cpp  raft_snapshot_creation_tests.cpp  raft_snapshot_tests.cpp  raft_tests.cpp  raft_wal_tests.cpp  replication_failover_tests.cpp  replication_simulator_tests.cpp  replication_tests.cpp  resp_integration_test.cpp  resp_pipelining_tests.cpp  resp_router_tests.cpp  resp_tests.cpp  router_concurrency_test.cpp  sharder_rebalance_more_tests.cpp  sharder_rebalance_tests.cpp  sharder_tests.cpp
deploy/docker/: Dockerfile.cpp  Dockerfile.java
deploy/k8s/: deployment.yaml
docs/: architecture.md  benchmarks.md  cluster_map.md  protocol.md  replication.md
examples/http/: example_client.py
examples/memcached/: example_client.py
java/: build.gradle  gradlew  gradlew.bat  settings.gradle
java/docs/: design.md
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/com/example/cache/: Cache.java  LRUCache.java  NettyServer.java
java/src/main/java/com/example/cache/protocol/: HttpProtocol.java  MemcachedProtocol.java
java/src/test/java/com/example/cache/: CacheTest.java
scripts/: bench.sh  cluster_demo.py  run_local.sh
scripts/bench/: run_bench.sh
